@@ -28,6 +28,7 @@ namespace fastonosql
             Default = 0,
             Command = 1,
             Types = 2,
+            Sentinel = 3,
             HelpKeyword
         };
 
@@ -42,5 +43,6 @@ namespace fastonosql
     private:
         void paintCommands(const QString& source, int start);
         void paintTypes(const QString& source, int start);
+        void paintSentinelCommands(const QString& source, int start);
     };
 }
