@@ -13,6 +13,7 @@ namespace fastonosql
 
         registerImage(RedisLexer::Command, GuiFactory::instance().commandIcon(REDIS).pixmap(QSize(64,64)));
         registerImage(RedisLexer::Types, GuiFactory::instance().typeIcon(REDIS).pixmap(QSize(64,64)));
+        registerImage(RedisLexer::Sentinel, GuiFactory::instance().commandIcon(REDIS).pixmap(QSize(64,64)));
         registerImage(RedisLexer::HelpKeyword, GuiFactory::instance().messageBoxQuestionIcon().pixmap(QSize(64,64)));
 
         setLexer(red);
