@@ -1,6 +1,7 @@
 0.2.5
 [Alexandr Topilski]
 - Update hiredis sources
+- Sentinel commands support for Redis
 
 0.2.4 / August 10, 2015
 [Alexandr Topilski]
